cmake_minimum_required(VERSION 3.17)
project(CppDemo)

set(CMAKE_CXX_STANDARD 14)

#add_executable(CppDemo #[[main.cpp]] classDemo.cpp classDemo.h overload.cpp construct.cpp)
#add_executable(CppDemo construct.cpp)
#add_executable(CppDemo extend.cpp)
#add_executable(CppDemo polymorphic.cpp)template.cpp
#add_executable(CppDemo fileio.cpp )
add_executable(CppDemo template.cpp)